--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,5 @@
+
+
 <html lang="en">
 
 <head>
@@ -10,6 +12,6 @@
 <body>
     <h1>Welcome!</h1>
     <p>To a very simple static html page for testing Amplify hosting</p>
-</body>
+    <p>Guid: bc9e4425-3d11-42b7-b56a-22e2d1f71374</p></body>
 
 </html>
